2008-01-12  Raphael hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Fields.pm: Define variables containing
	authoritative list of fields for debian/control (one for source
	stanza, one for package stanza).
	* scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
	scripts/dpkg-source.pl: Use the new variables to properly ignore
	valid fields. Some related cleanup.

2008-01-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-gencontrol.pl: Also force version in ${binary:Version}
	if dpkg-gencontrol -v<version> is used. That way we're consistent
	with the definition of that variable in deb-substvars(5).

2008-01-10  Raphael Hertzog  <hertzog@debian.org>

	* debian/control: Add a "Breaks: dpkg-dev (= 1.14.13),
	dpkg-dev (= 1.14.14)" on dpkg to force upgrade of those dpkg-dev
	versions that would break with the move of the compression related
	variables from Dpkg.pm into Dpkg/Compression.pm.

2008-01-08  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Version.pm: Import missing error function from
	Dpkg::ErrorHandling.

	* scripts/po/POTFILES.in: Add many modules containing translatable
	strings.

	* scripts/Dpkg/Changelog.pm (parse_changelog): New function to
	replace controllib's parsechangelog.

	* scripts/dpkg-buildpackage.pl, scripts/dpkg-checkbuilddeps.pl,
	scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
	scripts/dpkg-gensymbols.pl, scripts/dpkg-source.pl: Update scripts to use
	Dpkg::Changelog::parse_changelog instead of the old controllib.pl's
	parsechangelog. With this last change controllib.pl is no more used by
	any script.

	* scripts/controllib.pl: Removed as it's no more used by any
	script.

	* debian/dpkg-dev.install: Add missing modules.

2008-01-08  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-parsechangelog.pl: Make the
	-L option actually work (it's only been eleven
	years...)
	
	* scripts/Dpkg/ErrorHandling.pm (report): export.

2008-01-08  Raphael Hertzog  <hertzog@debian.org>
