@@ -30,6 +30,7 @@ dpkg (1.14.16) UNRELEASED; urgency=low
   * Also force version in ${binary:Version} if dpkg-gencontrol -v<version>
     is used. That way we're consistent with the definition of that variable
     in deb-substvars(5). Closes: #433477
+  * Add support of Dm-Upload-Allowed field. Closes: #453400
 
   [ Updated manpages translations ]
   * Fix typo in French. Closes: #460021
