@@ -1,5 +1,10 @@
 2008-01-12  Raphael hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Fields.pm, scripts/dpkg-source.pl: Add support of
+	Dm-Upload-Allowed field. It automatically ends up in the dsc.
+
+2008-01-12  Raphael hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Fields.pm: Define variables containing
 	authoritative list of fields for debian/control (one for source
 	stanza, one for package stanza).
